<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text_login_email"
        android:layout_width="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorEditTextDark"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="32dp"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorEditTextDark" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/login_button"
        app:layout_constraintEnd_toEndOf="@+id/text_input_login_password"
        app:layout_constraintStart_toStartOf="@+id/text_input_login_password"
        app:layout_constraintTop_toBottomOf="@+id/text_input_login_password" />

    <TextView
        android:id="@+id/text_view_register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register_label"
        android:layout_gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</LinearLayout>
